# Konkr

./: .gitignore  CMakeLists.txt  README.md
res/imgs/: GameSpriteSheet.aseprite  UiSpriteSheet.aseprite
res/maps/: map01.map  map02.map  map03.map  map04.map  unity.map
src/: Main.cpp
src/Engine/: Game.cpp  Game.hpp
src/Engine/Events/: Event.hpp  Event.inl  IEventHandler.hpp
src/Engine/Graphics/: Color.hpp  Cursor.cpp  Cursor.hpp  Font.cpp  Font.hpp  Sdl.cpp  Sdl.hpp  ShapeDrawer.cpp  ShapeDrawer.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp
src/Engine/Inputs/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
src/Engine/Managers/: EventManager.cpp  EventManager.hpp  GuiManager.cpp  GuiManager.hpp  ResourceManager.cpp  ResourceManager.hpp  SceneManager.cpp  SceneManager.hpp  SceneManager.inl  TimeManager.cpp  TimeManager.hpp  WindowManager.cpp  WindowManager.hpp
src/Engine/Math/: Math.hpp  Rect.hpp  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl
src/Engine/Scenes/: Scene.cpp  Scene.hpp  Scene.inl  SceneObject.hpp
src/Engine/Ui/: Gui.hpp  GuiEnums.hpp
src/Engine/Utils/: Logs.hpp  Random.hpp  Timer.cpp  Timer.hpp  Utils.cpp  Utils.hpp
src/Konkr/: Konkr.cpp  Konkr.hpp
src/Konkr/Editor/: EditorManager.cpp  EditorManager.hpp
src/Konkr/Factories/: PopupFactory.cpp  PopupFactory.hpp
src/Konkr/Hex/: HexContainer.cpp  HexContainer.hpp  HexContainer.inl  HexEnums.hpp  HexTile.cpp  HexTile.hpp  Map.cpp  Map.hpp
src/Konkr/IO/: MapFile.cpp  MapFile.hpp
src/Konkr/Managers/: GameInteractionManager.cpp  GameInteractionManager.hpp  GameManager.cpp  GameManager.hpp
src/Konkr/Models/: Building.hpp  Entity.hpp  Player.hpp  Unit.hpp
src/Konkr/Scenes/: EditorScene.cpp  EditorScene.hpp  GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp
src/Konkr/Utils/: Constants.cpp  Constants.hpp
(+41 files in other folders)
